# gravitas

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  common.h  lessons_learned.md  main.c  main.rlox  main.vt  utils.py
.github/workflows/: vtas.yml
chunk/: chunk.c  chunk.h
crates/: Cargo.toml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: fun.rs  lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: callables.rs  chunk.rs  lib.rs  state.rs
crates/bytecode/src/expr/: atom.rs  binary.rs  flow_control.rs  mod.rs  unary.rs
crates/cli/: Cargo.toml  debug.gv  test.gv
crates/cli/src/: compiler.rs  main.rs  options.rs  repl.rs  run_file.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/common/: error.rs  mod.rs
crates/parser/src/parse/: mod.rs  operator.rs  pieces.rs  utils.rs
crates/parser/src/parse/expr/: atom.rs  control_flow.rs  mod.rs
crates/parser/src/parse/stmt/: class.rs  fun.rs  mod.rs
crates/parser/src/token/: constants.rs  mod.rs  operator.rs
crates/parser/src/token/operator/: mod.rs  precedence.rs
crates/parser/src/utils/: error.rs  mod.rs
crates/parser/tests/: parser.rs  samples.rs
crates/parser/tests/sample_programs/: control_flow.vt  coords.vt  fib.vt  fizzbuzz.vt  functions.vt  literals.vt  oop.vt  sort.vt  variables.vt
crates/vm/: Cargo.toml
crates/vm/src/: arithmetic.rs  basic_expr.rs  call.rs  call_frame.rs  eq_ord.rs  flow_control.rs  gc.rs  lib.rs  memory.rs  obj.rs  runtime_error.rs  runtime_value.rs  stack.rs
crates/vm/src/gravitas_std/: functions.rs  mod.rs
disassembler/: disassembler.c  disassembler.h
docs/: architecture.md  how-to-use.md  syntax.md
examples/: fib.rlox
gravitas_tests/expr/: conditional.vtest  loops.vtest
memory/: memory.c  memory.h
src/: constants.rs  lib.rs  main.rs  settings.rs  utils.rs
src/bytecode/: chunk.rs  function.rs  mod.rs  opcode.rs  state.rs  value.rs
src/bytecode/expr/: affix.rs  atom.rs  binary.rs  block.rs  call.rs  class.rs  closure.rs  conditional.rs  identifier.rs  loops.rs  mod.rs  unary.rs  var.rs
src/bytecode/stmt/: class.rs  expr.rs  function.rs  mod.rs  print.rs  var.rs
src/chunk/: mod.rs  opcode.rs
src/cli/: mod.rs
src/cli/commands/: compile.rs  mod.rs  test.rs
src/compiler/: mod.rs  token.rs
src/debugger/: mod.rs
src/parser/: ast.rs  error.rs  mod.rs  operator.rs  token.rs
src/parser/expr/: affix.rs  atom.rs  binary.rs  block.rs  call.rs  class.rs  closure.rs  conditional.rs  grouping.rs  identifier.rs  loops.rs  mod.rs  unary.rs  var.rs
src/parser/stmt/: class.rs  expr.rs  function.rs  mod.rs  print.rs  var.rs
src/std/: functions.rs  mod.rs  time.rs
src/utils/: graph.rs  iter.rs  logger.rs  mod.rs
src/vm/: call_frame.rs  injections.rs  mod.rs  settings.rs  stack.rs  utilities.rs
utils/: option.h
value/: value.c  value.h
vtas_tests/expr/: atom.vtest  binary.vtest  block.vtest  calls.vtest  closure.vtest  loops.vtest
(+2 files in other folders)
