[package]
name = "vtas"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
logos = "0.11.4"
lazy_static = "1.4.0"
derive_more = "0.99.9"
enum-as-inner = "0.3.3"
colored = "2.0.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
