[package]
name = "analyzer"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
common = { path = "../common" }
codespan-reporting = "0.11.1"