[package]
name = "cli"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
analyzer = { path = "../analyzer" }
common = { path = "../common" }
structopt = "0.3.21"
rustyline = "8.2.0"
codespan-reporting = "0.11.1"
lasso = "0.5.1"