[package]
name = "cli"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
analyzer = { path = "../analyzer" }
common = { path = "../common" }
vm = { path = "../vm" }
bytecode = { path = "../bytecode" }
rustyline = "8.2.0"
codespan-reporting = "0.11.1"
clap = { version = "4.0.29", features = ["derive"] }
