[package]
name = "parser"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
logos-derive = "0.12.0"
regex = "1"
lazy_static = "1.4.0"
codespan-reporting = "0.11.1"
itertools = "0.10.0"
derive_more = "0.99.13"
common = { path = "../common" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
