[package]
name = "vm"
version = "0.1.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bytecode = { path = "../bytecode" }
lazy_static = "1.4.0"